Fixed scrollbar sticking in IE7 iframes.

--- a/app/stylesheets/answer_iframe.scss
+++ b/app/stylesheets/answer_iframe.scss
@@ -1,5 +1,6 @@
-body {
-    overflow-x: hidden;   
+html {
+    overflow:auto;
+    overflow-x: hidden;
 }
 
 #content {
